--- a/style.css
+++ b/style.css
@@ -5,3 +5,31 @@ h1 {
 p {
   font-family: sans-serif;
 }
+
+img  {
+  max-width: 240px;
+ }
+
+ .blue {
+
+ }
+
+ .cheddar {
+
+ }
+
+ .epoisses {
+
+ }
+
+ .gruyere {
+
+ }
+
+ .machego {
+
+ }
+
+ .parm {
+   
+ }
