Added a container class

--- a/style.css
+++ b/style.css
@@ -10,6 +10,10 @@ img  {
   max-width: 240px;
  }
 
+ .container {
+   
+ }
+
  .blue {
 
  }
@@ -26,10 +30,10 @@ img  {
 
  }
 
- .machego {
+ .manchego {
 
  }
 
  .parm {
-   
+
  }
