--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
+
+@import url('https://fonts.googleapis.com/css?family=Roboto+Condensed');
 h1 {
-  font-family: sans-serif;
+  font-family: 'Roboto Condensed', sans-serif;
+  font-size: 120px;
 }
 
 p {
@@ -20,17 +23,16 @@ img  {
  }
 
  .cheddar {
-   border: 1px solid;
-   border-color: red;
-   max-width: 240px;
+  /* max-width: 240px;
    max-height: 240px;
+   */
  }
 
  .epoisses {
-   border: 1px solid;
-   border-color: green;
+   /*
    max-width: 240px;
    max-height: 240px;
+   */
  }
 
  .gruyere {
