--- a/style.css
+++ b/style.css
@@ -3,10 +3,12 @@
 h1 {
   font-family: 'Roboto Condensed', sans-serif;
   font-size: 120px;
+  margin-bottom: 10px;
 }
 
 p {
   font-family: sans-serif;
+  max-width: 880px;
 }
 
 img  {
@@ -16,10 +18,11 @@ img  {
 
 
  .blue {
-   border: 1px solid;
+   /*border: 1px solid;
    border-color: blue;
    max-width: 240px;
    max-height: 240px;
+   */
  }
 
  .cheddar {
@@ -36,22 +39,25 @@ img  {
  }
 
  .gruyere {
-   border: 1px solid;
+  /* border: 1px solid;
    border-color: purple;
    max-width: 240px;
    max-height: 240px;
+   */
  }
 
  .manchego {
-   border: 1px solid;
+   /*border: 1px solid;
    border-color: black;
    max-width: 240px;
    max-height: 240px;
+   */
  }
 
  .parm {
-   border: 1px solid;
+   /* border: 1px solid;
    border-color: pink;
    max-width: 240px;
    max-height: 240px;
+   */
  }
