--- a/style.css
+++ b/style.css
@@ -17,6 +17,13 @@ img  {
   padding:10px;
  }
 
+ #cheese {
+   position: relative;
+   width: 240px;
+   height: 240px;
+   float: right; 
+ }
+
 
  .blue {
    /*border: 1px solid;
