--- a/style.css
+++ b/style.css
@@ -35,16 +35,32 @@ img  {
 
  }
 
+ .parm {
+   max-width: 240px;
+   max-height: 240px;
+ }
+
+ .manchego {
+   margin-right: 150px;
+   max-width: 240px;
+   max-height: 240px;
+   width: 260px;
+   height: 180px;
+ }
+
+ .gruyere {
+   max-width: 240px;
+   max-height: 240px;
+   width: 260px;
+   height: 180px;
+   float: left;
+ }
+
 /*
-.parm {
- border: 1px solid;
-  border-color: pink;
-  max-width: 240px;
-  max-height: 240px;
-}
+
 
  .blue {
-   /*border: 1px solid;
+   border: 1px solid;
    border-color: blue;
    max-width: 240px;
    max-height: 240px;
@@ -60,19 +76,9 @@ img  {
    max-height: 240px;
  }
 
- .gruyere {
-    border: 1px solid;
-   border-color: purple;
-   max-width: 240px;
-   max-height: 240px;
- }
 
- .manchego {
-  border: 1px solid;
-   border-color: black;
-   max-width: 240px;
-   max-height: 240px;
- }
+
+
 
 
  */
