Added to javascript
changed styles as well

--- a/style.css
+++ b/style.css
@@ -12,6 +12,11 @@ p {
   margin-left: 8px;
 }
 
+body {
+  display: grid;
+  grid-template-columns: auto;
+}
+
  svg {
    height: 180px;
    width: 260px;
@@ -29,7 +34,7 @@ p {
  }
 
  svg:hover {
-   opacity: 0.5; 
+   opacity: 0.5;
  }
 
  .parm {
