Added css hover effects

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto+Condensed');
 
-h1 {
+h1{
   font-family: 'Roboto Condensed', sans-serif;
   font-size: 120px;
   margin-bottom: 10px;
@@ -33,9 +33,15 @@ body {
    width: 240px;
  }
 
- svg:hover {
-   opacity: 0.5;
+ svg #mouse{
+   visibility: hidden;
  }
+
+
+ svg:hover #mouse{
+   visibility: visible;
+ }
+
 
  .parm {
    max-width: 240px;
