--- a/style.css
+++ b/style.css
@@ -4,15 +4,22 @@ h1{
   font-family: 'Roboto Condensed', sans-serif;
   font-size: 120px;
   margin-bottom: 10px;
+  color: white; 
 }
 
 p {
   font-family: sans-serif;
   max-width: 880px;
   margin-left: 8px;
+  color: white;
+}
+
+a{
+  color: white;
 }
 
 body {
+  background-color: black;
   display: grid;
   grid-template-columns: auto;
 }
