--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ a{
  }
 
 
- .blue {
+ #blue {
    max-width: 240px;
    max-height: 240px;
 }
@@ -51,22 +51,22 @@ a{
   margin-left: 260px;
  }
 
- .epoisses {
+ #epoisses {
    max-width: 240px;
    max-height: 240px;
  }
 
- .gruyere {
+#gruyere {
    max-width: 240px;
    max-height: 240px;
  }
 
- .manchego {
+ #manchego {
    max-width: 240px;
    max-height: 240px;
  }
 
- .parm {
+ #parm {
    max-width: 240px;
    max-height: 240px;
  }
