--- a/style.css
+++ b/style.css
@@ -1,9 +1,31 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto+Condensed');
 
+header nav {
+  max-width: 100%;
+  max-height: 100%;
+  font-family: 'Roboto Condensed', sans-serif;
+}
+
+header nav ul {
+  background-color: black;
+  color: white;
+  padding: 0;
+  margin: auto;
+  list-style: none;
+  position: relative;
+}
+
+header nav ul li {
+  display: inline-block;
+  margin: 10px;
+}
+
+
 h1{
   font-family: 'Roboto Condensed', sans-serif;
   font-size: 120px;
   margin-bottom: 10px;
+  margin-top: 0; 
 }
 
 body {
@@ -29,7 +51,7 @@ a{
    height: 240px;
    width: 240px;
    margin-right: 24px;
-   margin-bottom: 24px;
+   margin-bottom: 14px;
    float: left;
  }
 
@@ -86,4 +108,12 @@ a{
    max-width: 240px;
    max-height: 240px;
    float: left;
+ }
+
+ #classicblueContainer {
+   font-style:oblique;
+ }
+
+ #CheddarText {
+   font-style:oblique;
  }
