--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto+Condensed');
 
+/* This is for the nav */
 header nav {
   max-width: 100%;
   max-height: 100%;
@@ -20,6 +21,8 @@ header nav ul li {
   margin: 10px;
 }
 
+/*This is the end of the nav */
+
 h1{
   font-family: 'Roboto Condensed', sans-serif;
   font-size: 120px;
@@ -38,9 +41,6 @@ p {
   margin-left: 8px;
 }
 
-a{
-}
-
  svg {
    height: 180px;
    width: 260px;
@@ -50,7 +50,7 @@ a{
    height: 240px;
    width: 240px;
    margin-right: 24px;
-   margin-bottom: 14px;
+   margin-bottom: 5px;
    float: left;
  }
 
@@ -94,28 +94,31 @@ a{
 #gruyere {
    max-width: 240px;
    max-height: 240px;
+   margin-top: 30px;
    float: left;
  }
 
  #manchego {
    max-width: 240px;
    max-height: 240px;
+   margin-top: 30px;
    float: left;
  }
 
  #parmigianoreggiano {
    max-width: 240px;
    max-height: 240px;
+   margin-top: 30px;
    float: left;
  }
 
- #classicblueContainer {
+ /*#classicblueContainer {
    font-style:oblique;
  }
 
  #CheddarText {
    font-style:oblique;
- }
+ }*/
 
  /* The Modal (background) */
 .modal {
