--- a/style.css
+++ b/style.css
@@ -112,13 +112,10 @@ p {
    float: left;
  }
 
- /*#classicblueContainer {
-   font-style:oblique;
+ button {
+   width: 240px;
  }
 
- #CheddarText {
-   font-style:oblique;
- }*/
 
  /* The Modal (background) */
 .modal {
@@ -127,9 +124,8 @@ p {
     z-index: 1; /* Sit on top */
     left: 0;
     top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    /*overflow: auto; /* Enable scroll if needed */*/
+    width: 100%;
+    height: 100%;
     background-color: rgb(0,0,0); /* Fallback color */
     background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
 }
