--- a/style.css
+++ b/style.css
@@ -36,9 +36,9 @@ body {
 }
 
 p {
-  font-family: sans-serif;
+  /*font-family: sans-serif;
   max-width: 880px;
-  margin-left: 8px;
+  margin-left: 8px;*/
 }
 
  svg {
@@ -67,10 +67,10 @@ p {
 }
 
  #container {
-   width: 720px;
-   margin: 10 auto;
- }
+   width: 740px;
+   margin: 0 auto;
 
+ }
 
  #classicblue {
    max-width: 240px;
@@ -115,4 +115,10 @@ p {
 #source {
   font-size: 11px;
   font-style: italic;
+}
+
+#cheese {
+  width: 240px;
+  margin-bottom: 10px;
+  margin-right: 10px;
 }
