--- a/style.css
+++ b/style.css
@@ -36,9 +36,9 @@ body {
 }
 
 p {
-  /*font-family: sans-serif;
+  font-family: sans-serif;
   max-width: 880px;
-  margin-left: 8px;*/
+  margin-left: 8px;
 }
 
  svg {
@@ -59,6 +59,14 @@ p {
  }
 
  svg:hover #mouse{
+   visibility: visible;
+ }
+
+ svg #parmigianoreggiano-m {
+   visibility: hidden;
+ }
+
+ svg:hover #parmigianoreggiano-m{
    visibility: visible;
  }
 
