--- a/style.css
+++ b/style.css
@@ -141,4 +141,7 @@ position: relative;
   text-align: center;
   margin-left: 220px;
   /*z-index: 50px;*/
+  border: 1px solid black;
+  width: 960px;
+  height: 50px;
 }
