--- a/style.css
+++ b/style.css
@@ -145,3 +145,20 @@ position: relative;
   width: 960px;
   height: 50px;
 }
+
+button {
+  color: white;
+}
+
+#closebutton {
+  font-size: 16px;
+   width: 100px;
+   height: 30px;
+   background-color: black;
+   border: none;
+   position: absolute;
+   right: 0;
+   bottom: 0;
+   margin-bottom: 12px;
+   margin-right: 18px;
+}
